package= { name= 'camera', version= '0.0.0', edition= '2021' }
[dependencies]
fehler='*'
bytemuck='*'
vector={git='https://github.com/Matthias-Fauconneau/vector'}
image={git='https://github.com/Matthias-Fauconneau/image'}
uvc-sys='*'
cameleon={version='*', features=['libusb']}
ui={git='https://github.com/Matthias-Fauconneau/ui', optional=true}#, features=['softbuffer']} #'text'

#[patch.'https://github.com/Matthias-Fauconneau/ui']
#ui={path='../ui'}
#[patch.'https://github.com/Matthias-Fauconneau/image']
#image={path='../image'}
#[patch.'https://github.com/Matthias-Fauconneau/vector']
#vector={path='../vector'}