package={name='camera', version='0.0.0', edition='2021'}
[dependencies]
fehler='*'
bytemuck='*'
vector={git='https://github.com/Matthias-Fauconneau/vector'}
image={git='https://github.com/Matthias-Fauconneau/image'}
uvc={package='uvc-sys', version='*', optional=true}
cameleon={version='*', features=['libusb']}
ui={git='https://github.com/Matthias-Fauconneau/ui', optional=true}#, features=['softbuffer']} #'text'
imagers={package='image',version='*', optional=true}
chrono='*'
